<resources>
    <string name="app_name">HPCounter</string>
    <string name="cast_spell">Cast spell</string>
    <string name="attack">Attack</string>
    <string name="heal_2_hp">Heal 2 HP</string>
    <string name="priest">Priest</string>
    <string name="add_2_armor">add 2 armor</string>
    <string name="warrior">Warrior</string>
    <string name="end_round">End round</string>
    <string name="new_game">New Game</string>
    <string name="warrior_wins">Warrior wins!</string>
    <string name="priest_wins">Priest wins!</string>
</resources>
